--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,17 +1,33 @@
 .card__custom {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	flex-direction: column;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	text-align: center;
-	flex-basis: 30%;
+	-ms-flex-preferred-size: 30%;
+	    flex-basis: 30%;
 	position: relative;
 }
 
 .card__variations {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	column-gap: 1%;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-column-gap: 1%;
+	   -moz-column-gap: 1%;
+	        column-gap: 1%;
 	width: 50%;
 }
 .card__variations__btn {
@@ -38,16 +54,26 @@
 .card__image__custom {
 	width: 100%;
 	aspect-ratio: 1.1/1;
-	object-fit: contain;
+	-o-object-fit: contain;
+	   object-fit: contain;
 }
 
 .card--description {
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
 	gap: 8px;
 	margin-top: -32px;
-	justify-content: space-between;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	width: 100%;
 	z-index: 999;
 }
@@ -77,15 +103,26 @@
 }
 
 .card__img__colection {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	overflow: hidden;
 	width: 100%;
-	justify-content: 'center';
+	-webkit-box-pack: 'center';
+	    -ms-flex-pack: 'center';
+	        justify-content: 'center';
 }
 
 .card__img__colection .card__image__custom {
-	flex: 1 0 100%;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 0 100%;
+	        flex: 1 0 100%;
+	-webkit-transition: translate 1s ease-out;
+	-o-transition: translate 1s ease-out;
 	transition: translate 1s ease-out
 }
 
@@ -120,7 +157,8 @@
 
 @media (max-width: 700px) {
 	.card__custom {
-		flex-basis: 47%;
+		-ms-flex-preferred-size: 47%;
+		    flex-basis: 47%;
 	}
 	.card__custom h2 {
 		font-size: 3vw;
