--- a/src/components/Default/Default.css
+++ b/src/components/Default/Default.css
@@ -1,7 +1,19 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 .cards__container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-wrap: wrap;
-	column-gap: 5%;
+	-ms-flex-wrap: wrap;
+	    flex-wrap: wrap;
+	-webkit-column-gap: 5%;
+	   -moz-column-gap: 5%;
+	        column-gap: 5%;
 	row-gap: 5vw;
 	margin: 10%;
 	margin-bottom: 2%;
@@ -31,8 +43,12 @@
 }
 
 .order__container {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-end;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
 	margin: 0 10%;
 }
 
@@ -111,7 +127,9 @@
 @media (max-width: 500px) {
 	.order__container {
 		margin: 0;
-		justify-content: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 		width: 100%;
 	}
 	.order__container select {
