--- a/src/components/DefaultBanner/DefaultBanner.css
+++ b/src/components/DefaultBanner/DefaultBanner.css
@@ -1,6 +1,3 @@
-.header__banner {
-}
-
 .header__banner--mobile {
 	display: none;
 	width: 100%;
@@ -18,7 +15,8 @@
 	}
 	.header__banner--mobile {
 		display: unset;
-		object-fit: contain;
+		-o-object-fit: contain;
+		   object-fit: contain;
 	}
 }
 
