--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -17,7 +17,8 @@
 
 .logo__footer__img {
 	width: 20vw;
-	object-fit: contain;
+	-o-object-fit: contain;
+	   object-fit: contain;
 	margin-top: 200px;
 }
 
@@ -32,10 +33,18 @@
 
 .footer--fields {
 	background-color: #f7913a;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-evenly;
-	align-items: flex-start;
-	column-gap: 2%;
+	-webkit-box-pack: space-evenly;
+	    -ms-flex-pack: space-evenly;
+	        justify-content: space-evenly;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
+	-webkit-column-gap: 2%;
+	   -moz-column-gap: 2%;
+	        column-gap: 2%;
 	height: 400px;
 	line-height: 1.3rem;
 }
@@ -49,9 +58,16 @@
 }
 
 .f--field {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: space-evenly;
+	    -ms-flex-pack: space-evenly;
+	        justify-content: space-evenly;
 	row-gap: 8px;
 }
 
@@ -71,8 +87,12 @@
 	background-color: black;
 	margin-top: 0;
 	height: 100px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 }
 
 .footing--note p {
@@ -83,6 +103,8 @@
 	margin-left: auto;
 	/* margin-right: 17%; */
 	/* background-color: green; */
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
 	/* justify-content: space-between; */
 }
@@ -105,12 +127,21 @@
 	line-height: 0;
 	background-color: #de7c34;
 	height: 64px;
-	align-items: center;
-	align-content: center;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-ms-flex-line-pack: center;
+	    align-content: center;
 	text-align: center;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	column-gap: 8px;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-column-gap: 8px;
+	   -moz-column-gap: 8px;
+	        column-gap: 8px;
 }
 
 .rights__reserved img {
@@ -125,9 +156,15 @@
 .footer__social {
 	height: 28px;
 	font-size: 16px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-start;
-	column-gap: 8px;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
+	-webkit-column-gap: 8px;
+	   -moz-column-gap: 8px;
+	        column-gap: 8px;
 	margin-bottom: 12px;
 	text-decoration: none;
 	cursor: pointer;
@@ -139,7 +176,8 @@
 .footer__social p {
 	margin: 0;
 	font-size: 14px;
-	align-content:center;
+	-ms-flex-line-pack:center;
+	    align-content:center;
 }
 
 .contato a {
@@ -165,16 +203,26 @@
 		margin-bottom: 8px;
 	}
 	.footer--fields {
-		flex-direction: column;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		height: 600px;
 		padding: 1% 1%;
 		padding-bottom: 0;
 	}
 	.footer__block, .endereço>div, .footer--fields>img, .footer__second_col {
 		margin: auto;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction:column;
+		-webkit-box-orient:vertical;
+		-webkit-box-direction:normal;
+		    -ms-flex-direction:column;
+		        flex-direction:column;
 	}
 	.logo__footer__img {
 		width: 50%;
@@ -182,14 +230,25 @@
 		margin-top: 0;
 	}
 	.logo__footer {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-pack: justify;
+		    -ms-flex-pack: justify;
+		        justify-content: space-between;
 		width: 100%;
 	}
 	.footer__follow_us {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: flex-end;
+		-webkit-box-pack: end;
+		    -ms-flex-pack: end;
+		        justify-content: flex-end;
 		margin: auto;
 	}
 	.footer__follow_us {
@@ -205,6 +264,8 @@
 		row-gap: unset;
 	}
 	.follow__us__mobile {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
 		gap: 2vw;
 		margin-left: auto;
