--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,13 @@
 .header__nav {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: space-between;
-	align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	padding: 0 5%;
 	height: 128px;
 	background-color: #2c2d3b;
@@ -17,13 +23,20 @@
 
 .header__nav > img {
 	width: 330px;
-	object-fit: contain;
+	-o-object-fit: contain;
+	   object-fit: contain;
 }
 .header__nav--menu {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-basis: 100%;
-	justify-content: space-around;
-	align-items: center;
+	-ms-flex-preferred-size: 100%;
+	    flex-basis: 100%;
+	-ms-flex-pack: distribute;
+	    justify-content: space-around;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	height: 100%;
 }
 
@@ -59,7 +72,10 @@
 
 @media (max-width: 1315px) {
 	.header__nav {
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
 		padding: 1% 0;
 		margin-bottom: 0;
 	}
@@ -78,9 +94,16 @@
 }
 @media (max-width: 880px) {
 	.header__nav {
-		flex-direction: row;
-		justify-content: center;
-		align-items: center;
+		-webkit-box-orient: horizontal;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: row;
+		        flex-direction: row;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 		height: 10vw;
 	}
 	.header__logo {
@@ -98,6 +121,8 @@
 		left: 2%;
 		background-color: transparent;
 		border: none;
+		-webkit-transition: rotate 0.3s;
+		-o-transition: rotate 0.3s;
 		transition: rotate 0.3s;
 	}
 	.hambuger__close {
@@ -133,11 +158,17 @@
 		width: 100%;
 		margin:0;
 		background-color: #2c2d3b;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
 		padding-top: 8vh;
 		overflow-y: scroll;
-		box-sizing: border-box;
+		-webkit-box-sizing: border-box;
+		        box-sizing: border-box;
 	}
 
 	.mobile__on > .mobile__background button {
