--- a/src/pages/Produto/Produto.css
+++ b/src/pages/Produto/Produto.css
@@ -1,22 +1,41 @@
 .product {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
-	column-gap: 5%;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
+	-webkit-column-gap: 5%;
+	   -moz-column-gap: 5%;
+	        column-gap: 5%;
 }
 
 .card__img__colection--product {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: row;
+	-webkit-box-orient: horizontal;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: row;
+	        flex-direction: row;
 	overflow: hidden;
 	width: 40vw;
-	justify-content: 'center';
+	-webkit-box-pack: 'center';
+	    -ms-flex-pack: 'center';
+	        justify-content: 'center';
 }
 .product__variations {
 	width: 100%;
 	height: 32px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-end;
-	column-gap: 2%;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
+	-webkit-column-gap: 2%;
+	   -moz-column-gap: 2%;
+	        column-gap: 2%;
 }
 
 .product__variations__btn {
@@ -50,9 +69,15 @@
 	font-size: 20px;
 	width: 78px;
 	height: 12px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: flex-end;
-	align-items: center;
+	-webkit-box-pack: end;
+	    -ms-flex-pack: end;
+	        justify-content: flex-end;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
 	right: 0;
 	font-weight: 500;
 }
@@ -60,21 +85,35 @@
 .card__image__custom--product {
 	width: 100%;
 	aspect-ratio: 1.1/1;
-	object-fit: contain;
+	-o-object-fit: contain;
+	   object-fit: contain;
 }
 
 .card__img__colection--product .card__image__custom--product {
-	flex: 1 0 100%;
+	-webkit-box-flex: 1;
+	    -ms-flex: 1 0 100%;
+	        flex: 1 0 100%;
+	-webkit-transition: translate 1s ease-out;
+	-o-transition: translate 1s ease-out;
 	transition: translate 1s ease-out
 }
 
 .product__specs {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	    -ms-flex-direction: column;
+	        flex-direction: column;
+	-webkit-box-pack: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	line-height: 32px;
 	width: 500px;
-	align-items: flex-start;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
 }
 
 
@@ -119,8 +158,13 @@
 
 @media (max-width: 1150px) {
 	.product {
-		flex-direction: column;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
 	}
 	.card__img__colection--product {
 		width: 60vw;
@@ -135,7 +179,9 @@
 	.product__variations {
 		margin: 2% 0;
 		height: 40px;
-		justify-content: center;
+		-webkit-box-pack: center;
+		    -ms-flex-pack: center;
+		        justify-content: center;
 	}
 	.product__variations__btn:hover, .product__variations__btn.active {
 		border: 5px solid #2c2d3b;
